--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toko UMKM kamu</title>
+    <title>Ariya's_Collection</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600;700&family=Chewy&family=Fredoka:wght@500;600&family=Poppins:wght@400;500;600&family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
@@ -477,7 +477,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-container">
-            <div class="logo">Nama_Toko_Kamu</div>
+            <div class="logo">Ariya's_Collection</div>
             <button class="menu-toggle" aria-label="Toggle menu">☰</button>
             <nav id="main-nav">
                 <ul>
@@ -506,9 +506,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Taro</h3>
+                    <p class="product-price">Rp.3000</p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
             </div>
 
