--- a/index.html
+++ b/index.html
@@ -492,8 +492,10 @@
     
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Donat Lezat untuk Setiap Momen Bahagia</h1>
-        <p>Temukan berbagai varian donat kami yang dibuat dengan bahan premium dan penuh cinta. Setiap gigitan akan membawa kebahagiaan!</p>
+        <h1>"Ariya's_Collection"
+ Risol Lumer | Donat Empuk | Bucket Jajan Kekinian</h1>
+        <p>Selamat datang di "Ariya's_Collection", rumahnya jajanan manis dan gurih yang selalu bikin nagih!
+Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang cocok buat kado atau surprise teman, semua dibuat fresh setiap hari dengan bahan pilihan.</p>
     </section>
     
     <!-- Products Section -->
@@ -507,7 +509,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Taro</h3>
-                    <p class="product-price">Rp.3000</p>
+                    <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
             </div>
@@ -517,9 +519,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Matcha</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai mathca. </p>
                 </div>
             </div>
 
@@ -528,9 +530,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Coklat</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai coklat. </p>
                 </div>
             </div>
 
@@ -539,9 +541,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Coklat Kacang</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan toping selai coklat dan kacang cincang. </p>
                 </div>
             </div>
 
@@ -550,9 +552,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Coklat Kelapa</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan toping selai coklat dan kelapa parut. </p>
                 </div>
             </div>
 
@@ -561,9 +563,9 @@
                     <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Nama produk kamu</h3>
-                    <p class="product-price">Harga produk kamu</p>
-                    <p class="product-description">deskripsi produk kamu. </p>
+                    <h3 class="product-name">Donut Original</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lwmbut dengan taburan gula halus. </p>
                 </div>
             </div>
         </div>
