--- a/index.html
+++ b/index.html
@@ -575,18 +575,18 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
     <section class="location" id="location">
         <h2>Temukan Toko Kami</h2>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.923073012687!2d107.60891831539376!3d-6.897980769343147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e64a3e9d1b3f%3A0x9e9d6b9b9b9b9b9b!2sDonut%20Suka%20Suka!5e0!3m2!1sen!2sid!4v1620000000000!5m2!1sen!2sid" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="location-info">
             <div class="info-card">
                 <h3>Lokasi Toko</h3>
-                <p><i class="fas fa-map-marker-alt"></i> Alamat toko kamau</p>
+                <p><i class="fas fa-map-marker-alt"></i>Sambirejo, Kec. Pare, Kabupaten Kediri, Jawa Timur 64226</p>
             </div>
             <div class="info-card">
                 <h3>Jam Buka</h3>
-                <p><i class="fas fa-clock"></i> Senin - Minggu: 08.00 - 20.00 WIB</p>
-                <p><i class="fas fa-coffee"></i> Weekend buka lebih awal pukul 07.00</p>
-                <p><i class="fas fa-info-circle"></i> Tutup pada hari libur nasional</p>
+                <p><i class="fas fa-clock"></i> 09.00 pagi - 16.00 sore</p>
+                <p><i class="fas fa-coffee"></i>Buka lebih awal ketika ada event khusus</p>
+                <p><i class="fas fa-info-circle"></i> Tutup pada hari jumat dan tanggal merah </p>
             </div>
         </div>
     </section>
@@ -597,14 +597,14 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             <div class="footer-logo">Donut Suka Suka</div>
             
             <div class="contact-info">
-                <p><i class="fas fa-map-marker-alt"></i> Alamat lengkap toko kamu </p>
-                <p><i class="fas fa-clock"></i> jam buka toko kamu</p>
-                <p><i class="fas fa-envelope"></i> email kamu</p>
-                <p><i class="fas fa-phone"></i> Nomor HP kamu</p>
+                <p><i class="fas fa-map-marker-alt"></i>"64JM+PXW, Jl. Diponegoro, Sambirejo, Kec. Pare, Kabupaten Kediri, Jawa Timur 64226"</p>
+                <p><i class="fas fa-clock"></i>09.00 - 16.00 </p>
+                <p><i class="fas fa-envelope"></i>sitimariani946@gmail.com</p>
+                <p><i class="fas fa-phone"></i>0895410714001</p>
             </div>
             
             <div class="social-links">
-                <a href="https://wa.me/6281234567890" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/62895410714001" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://instagram.com/donatsukasuka" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://facebook.com/donatsukasuka" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="https://twitter.com/donatsukasuka" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
