--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Taro</h3>
@@ -516,7 +516,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="Donut matcha.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Matcha</h3>
@@ -527,7 +527,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="Donut coklat.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Coklat</h3>
@@ -538,7 +538,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="coklat kacang.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Coklat Kacang</h3>
@@ -549,7 +549,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="coklat kelapa.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Coklat Kelapa</h3>
@@ -560,7 +560,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="Foto Produk Kamu_20250603_013326_0000.png" alt="Donat Cokelat Meleleh">
+                    <img src="original.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Donut Original</h3>
