--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                 <div class="product-info">
                     <h3 class="product-name">Donut Original</h3>
                     <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lwmbut dengan taburan gula halus. </p>
+                    <p class="product-description">Donut lembut dengan taburan gula halus. </p>
                 </div>
             </div>
         </div>
