--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-description">Donut lembut dengan taburan gula halus. </p>
                 </div>
 
-                <h2>Katalog Produk Kami</h2>
+                <h2>Risol</h2>
         <div class="product-grid">
             <!-- Product 1 -->
             <div class="product-card">
@@ -581,7 +581,6 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
             </div>
-        </div>
     </section>
     
     <!-- Location Section -->
