--- a/index.html
+++ b/index.html
@@ -501,6 +501,8 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
     <!-- Products Section -->
     <section class="products" id="products">
         <h2>Katalog Produk Kami</h2>
+        <br>
+        <h2>Donut</h2>
         <div class="product-grid">
             <!-- Product 1 -->
             <div class="product-card">
@@ -567,20 +569,8 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan taburan gula halus. </p>
                 </div>
-
-                <h2>Risol</h2>
-        <div class="product-grid">
-            <!-- Product 1 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
-                    <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
-                </div>
             </div>
+        </div>
     </section>
     
     <!-- Location Section -->
@@ -656,4 +646,4 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
         });
     </script>
 </body>
-</html>
+    </html>
