--- a/index.html
+++ b/index.html
@@ -569,6 +569,18 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan taburan gula halus. </p>
                 </div>
+                <br>
+                <h2>Risol</h2>
+
+                <div class="product-card">
+                <div class="product-image">
+                    <img src="original.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Donut Original</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan taburan gula halus. </p>
+                </div>
             </div>
         </div>
     </section>
