--- a/index.html
+++ b/index.html
@@ -568,18 +568,23 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <h3 class="product-name">Donut Original</h3>
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan taburan gula halus. </p>
-                </div>
-                <br>
-                <h2>Risol</h2>
+                </div>                                                                                           </div>
+            </div>
+        </div>
+    </section>
 
-                <div class="product-card">
+    <section class="products" id="products">
+        <h2>Risol</h2>
+        <div class="product-grid">
+            <!-- Product 1 -->
+            <div class="product-card">
                 <div class="product-image">
-                    <img src="original.png" alt="Donat Cokelat Meleleh">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Original</h3>
+                    <h3 class="product-name">Donut Taro</h3>
                     <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan taburan gula halus. </p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
             </div>
         </div>
