--- a/index.html
+++ b/index.html
@@ -586,6 +586,33 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
+
+                <div class="product-card">
+                <div class="product-image">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Donut Taro</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="products" id="products">
+        <h2>Custom bucket</h2>
+        <div class="product-grid">
+            <!-- Product 1 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Donut Taro</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                </div>
             </div>
         </div>
     </section>
