--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <h3 class="product-name">Donut Original</h3>
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan taburan gula halus. </p>
-                </div>                                                                                           </div>
+                </div>
             </div>
         </div>
     </section>
