--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
 
-                <div class="product-card">
+             <div class="product-card">
                 <div class="product-image">
                     <img src="taro.png" alt="Donat Cokelat Meleleh">
                 </div>
@@ -605,6 +605,26 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
         <div class="product-grid">
             <!-- Product 1 -->
             <div class="product-card">
+                <div class="product-image">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Donut Taro</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                </div>
+
+           <div class="product-card">
+                <div class="product-image">
+                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Donut Taro</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                </div>
+
+           <div class="product-card">
                 <div class="product-image">
                     <img src="taro.png" alt="Donat Cokelat Meleleh">
                 </div>
