--- a/index.html
+++ b/index.html
@@ -586,6 +586,8 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
+            </div>
+        </div>
 
              <div class="product-card">
                 <div class="product-image">
@@ -613,6 +615,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
+            </div>
 
            <div class="product-card">
                 <div class="product-image">
@@ -623,6 +626,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
                     <p class="product-price">Rp.2000</p>
                     <p class="product-description">Donut lembut dengan selai taro. </p>
                 </div>
+           </div>
 
            <div class="product-card">
                 <div class="product-image">
