--- a/index.html
+++ b/index.html
@@ -579,25 +579,36 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                    <img src="beef.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
+                    <h3 class="product-name">Beef</h3>
                     <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                    <p class="product-description">Risol dengan isian beef. </p>
                 </div>
             </div>
 
              <div class="product-card">
                 <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                    <img src="sosis.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
+                    <h3 class="product-name">Sosis</h3>
                     <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                    <p class="product-description">Risol dengan isian sosis. </p>
                 </div>
-            </div>
+             </div>
+
+                 <div class="product-card">
+                <div class="product-image">
+                    <img src="telur.png" alt="Donat Cokelat Meleleh">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">Telur</h3>
+                    <p class="product-price">Rp.2000</p>
+                    <p class="product-description">Risol dengan isian telur. </p>
+                </div>
+             </div>
         </div>
     </section>
 
@@ -607,34 +618,34 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                    <img src="Template Menu Web_20250604_083118_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
-                    <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                    <h3 class="product-name">Custom Bucket 1</h3>
+                    <p class="product-price">-</p>
+                    <p class="product-description">Custom Bucket bunga. </p>
                 </div>
             </div>
 
            <div class="product-card">
                 <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                    <img src="Template Menu Web_20250604_083118_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
-                    <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                    <h3 class="product-name">Custom Bucket 2</h3>
+                    <p class="product-price">-</p>
+                    <p class="product-description">Custom Bucket Snack. </p>
                 </div>
            </div>
 
            <div class="product-card">
                 <div class="product-image">
-                    <img src="taro.png" alt="Donat Cokelat Meleleh">
+                    <img src="Template Menu Web_20250604_083118_0000.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Donut Taro</h3>
-                    <p class="product-price">Rp.2000</p>
-                    <p class="product-description">Donut lembut dengan selai taro. </p>
+                    <h3 class="product-name">Custom Bucket 3</h3>
+                    <p class="product-price">-</p>
+                    <p class="product-description">Custom Bucket Bunga + Snack. </p>
                 </div>
             </div>
         </div>
