--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="beef.png" alt="Donat Cokelat Meleleh">
+                    <img src="daging.png" alt="Donat Cokelat Meleleh">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Beef</h3>
