--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
     <!-- Footer Section -->
     <footer id="contact">
         <div class="footer-content">
-            <div class="footer-logo">Donut Suka Suka</div>
+            <div class="footer-logo">사랑해🥰</div>
             
             <div class="contact-info">
                 <p><i class="fas fa-map-marker-alt"></i>"64JM+PXW, Jl. Diponegoro, Sambirejo, Kec. Pare, Kabupaten Kediri, Jawa Timur 64226"</p>
