--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ Dari donat empuk aneka topping, risol lumer isi mewah, sampai bucket custom yang
             
             <div class="social-links">
                 <a href="https://wa.me/62895410714001" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.instagram.com/donut_suka2" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/ariyas.collect1on" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/aryaanieaya" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="https://twitter.com/donatsukasuka" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
