--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="taro.png" alt="Donat Taro Premium" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Donat Taro Premium" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Donat Taro Premium</h3>
@@ -835,7 +835,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="Donut-matcha.png" alt="Donat Matcha Jepang" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Donat Matcha Jepang" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Donat Matcha Jepang</h3>
@@ -848,7 +848,7 @@
                 <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="Donut-coklat.png" alt="Donat Coklat Belgia" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Donat Coklat Belgia</h3>
@@ -864,7 +864,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="risol-mayo.png" alt="Risol Mayo Special" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Risol Mayo Special" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Risol Mayo Special</h3>
@@ -877,7 +877,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="risol-keju.png" alt="Risol Keju Mozzarella" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Risol Keju Mozzarella" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Risol Keju Mozzarella</h3>
@@ -893,7 +893,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="bucket-premium.png" alt="Bucket Premium 20pcs" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Bucket Premium 20pcs" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Bucket Premium 20pcs</h3>
@@ -906,7 +906,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="bucket-mix.png" alt="Bucket Mix Donat & Risol" loading="lazy">
+                        <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Bucket Mix Donat & Risol</h3>
