--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1 class="fade-in">Kreasi Donat & Risol Premium</h1>
+            <h1 class="fade-in">Kreasi Donat, Risol, dan Bucket custom rumahan</h1>
             <p class="fade-in delay-1">Setiap gigitan adalah pengalaman istimewa dengan bahan pilihan dan pembuatan yang penuh dedikasi. Temukan kenikmatan dalam setiap varian kami.</p>
             <div class="button-group">
                 <a href="#products" class="cta-button fade-in delay-2">
@@ -825,9 +825,10 @@
                         <img src="20250610_062607_0000.png" alt="Donat Taro Premium" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Donat Taro Premium</h3>
-                        <p class="product-price">Rp 12.000</p>
-                        <p class="product-description">Donat lembut dengan isian selai taro premium yang creamy dan tidak terlalu manis.</p>
+                        <h3 class="product-name">Coklat</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Donut lembut dengan lapisan coklat premium yang meleleh di mulut. Rasa klasik yang tak pernah gagal memanjakan lidah.
+</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -838,9 +839,9 @@
                         <img src="20250610_062607_0000.png" alt="Donat Matcha Jepang" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Donat Matcha Jepang</h3>
-                        <p class="product-price">Rp 15.000</p>
-                        <p class="product-description">Dengan bubuk matcha asli dari Jepang, memberikan rasa autentik yang nikmat.</p>
+                        <h3 class="product-name">Coklat Kacang</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Balutan coklat manis dipadukan dengan taburan kacang sangrai yang gurih dan renyah. Perpaduan rasa dan tekstur yang bikin nagih!</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -851,12 +852,53 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Donat Coklat Belgia</h3>
-                        <p class="product-price">Rp 14.000</p>
-                        <p class="product-description">Menggunakan coklat Belgia premium dengan kadar kakao 70% untuk rasa yang kaya.</p>
+                        <h3 class="product-name">Coklat Kelapa</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Donut berlapis coklat dengan taburan kelapa parut yang harum dan legit. Cita rasa tropis yang unik dan menggoda.</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Taro</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Donut dengan topping taro ungu yang creamy dan manis pas. Tampilan cantik, rasa fantastik!
+</p>
+                        <span class="product-category">Donat</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                </div>
+                
+                    <div class="product-info">
+                        <h3 class="product-name">Cappuchino</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Aroma kopi yang menggoda dengan rasa lembut khas cappuccino. Cocok untuk kamu yang ingin sensasi manis dengan sentuhan kopi.</p>
+                        <span class="product-category">Donat</span>
+                    </div>
+                </div>
+
+            <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Original</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Donut klasik yang ditaburi gula halus. Simpel, manis, dan selalu jadi favorit semua kalangan.
+</p>
+                        <span class="product-category">Donat</span>
+                    </div>
+            </div>
+            </div>
             </div>
             
             <h3 class="product-category-title">Risol</h3>
