--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arya's Collection - Donat & Risol Premium</title>
+    <title>Arya's Collection - Donat, Risol, dan Custom Bucket</title>
     <meta name="description" content="Toko donat dan risol premium dengan bahan pilihan. Pengiriman ke seluruh Pare, Kediri.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -897,9 +897,8 @@
 </p>
                         <span class="product-category">Donat</span>
                     </div>
-            </div>
-            </div>
-            </div>
+                </div>
+           </div>
             
             <h3 class="product-category-title">Risol</h3>
             <div class="product-grid">
