--- a/index.html
+++ b/index.html
@@ -827,8 +827,7 @@
                     <div class="product-info">
                         <h3 class="product-name">Coklat</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut lembut dengan lapisan coklat premium yang meleleh di mulut. Rasa klasik yang tak pernah gagal memanjakan lidah.
-</p>
+                        <p class="product-description">Donut lembut dengan lapisan coklat premium yang meleleh di mulut. Rasa klasik yang tak pernah gagal memanjakan lidah.</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -866,8 +865,7 @@
                     <div class="product-info">
                         <h3 class="product-name">Taro</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut dengan topping taro ungu yang creamy dan manis pas. Tampilan cantik, rasa fantastik!
-</p>
+                        <p class="product-description">Donut dengan topping taro ungu yang creamy dan manis pas. Tampilan cantik, rasa fantastik!</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -876,8 +874,6 @@
                     <div class="product-image">
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
-                </div>
-                
                     <div class="product-info">
                         <h3 class="product-name">Cappuchino</h3>
                         <p class="product-price">Rp 2.000</p>
@@ -893,12 +889,11 @@
                     <div class="product-info">
                         <h3 class="product-name">Original</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut klasik yang ditaburi gula halus. Simpel, manis, dan selalu jadi favorit semua kalangan.
-</p>
+                        <p class="product-description">Donut klasik yang ditaburi gula halus. Simpel, manis, dan selalu jadi favorit semua kalangan.</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
-           </div>
+            </div>
             
             <h3 class="product-category-title">Risol</h3>
             <div class="product-grid">
