--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="fade-in">Kreasi Donat, Risol, dan Bucket custom rumahan</h1>
-            <p class="fade-in delay-1">Setiap gigitan adalah pengalaman istimewa dengan bahan pilihan dan pembuatan yang penuh dedikasi. Temukan kenikmatan dalam setiap varian kami.</p>
+            <p class="fade-in delay-1">Selamat datang di Arya's_Collection, rumahnya camilan rumahan yang dibuat sepenuh hati. Dari donat yang empuk, risol isi melimpah, sampai bucket custom yang bisa kamu desain sendiri—semua kami hadirkan untuk nemenin momen manismu, kapan pun dan di mana pun.</p>
             <div class="button-group">
                 <a href="#products" class="cta-button fade-in delay-2">
                     <i class="fas fa-utensils"></i> Lihat Produk
@@ -991,7 +991,9 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Tentang Kami</h3>
-                    <p>Arya's Collection menyajikan produk bakery premium dengan bahan pilihan dan racikan khusus sejak 2020. Komitmen kami adalah memberikan pengalaman kuliner yang memuaskan.</p>
+                    <p>Arya's_Collection adalah brand rumahan yang menghadirkan donat empuk, risol lumer, dan custom bucket manis yang bisa disesuaikan dengan momenmu.
+
+Semua dibuat fresh, tanpa pengawet, dan pakai bahan pilihan. Nggak cuma soal rasa, tapi juga pengalaman—karena kami percaya, camilan enak itu yang bikin hati ikut senang.</p>
                     <div class="social-links">
                         <a href="https://www.instagram.com/donut_suka2" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/aryaanieaya" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
