--- a/index.html
+++ b/index.html
@@ -875,9 +875,9 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Cappuchino</h3>
+                        <h3 class="product-name">Tiramisu</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Aroma kopi yang menggoda dengan rasa lembut khas cappuccino. Cocok untuk kamu yang ingin sensasi manis dengan sentuhan kopi.</p>
+                        <p class="product-description">Donat empuk yang dilapisi krim tiramisu lembut, ada rasa kopi yang nyelip manis-pahitnya,Cocok buat nemenin ngopi, nonton series, atau sekadar nyari alasan buat nyemil.</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -971,15 +971,12 @@
                 <div class="info-card">
                     <h3>Lokasi Toko</h3>
                     <p><i class="fas fa-map-marker-alt"></i>Jl. Diponegoro No. 123, Sambirejo, Kec. Pare, Kabupaten Kediri, Jawa Timur 64226</p>
-                    <p><i class="fas fa-subway"></i>5 menit dari Stasiun Pare</p>
-                    <p><i class="fas fa-car"></i>Tersedia area parkir yang luas</p>
                 </div>
                 
                 <div class="info-card">
                     <h3>Jam Operasional</h3>
-                    <p><i class="fas fa-clock"></i> Senin-Kamis: 09.00 - 16.00 WIB</p>
-                    <p><i class="fas fa-clock"></i> Sabtu-Minggu: 08.00 - 17.00 WIB</p>
-                    <p><i class="fas fa-calendar-times"></i> Tutup setiap hari Jumat</p>
+                    <p><i class="fas fa-clock"></i> Senin-Sabtu: 09.00 - 16.00 WIB</p>
+                    <p><i class="fas fa-calendar-times"></i> Hari jum'at dan Tanggal Merah Libur</p>
                 </div>
             </div>
         </div>
@@ -1014,11 +1011,11 @@ Semua dibuat fresh, tanpa pengawet, dan pakai bahan pilihan. Nggak cuma soal ras
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope contact-icon"></i>
-                            <span class="contact-text">hello@aryacollection.com</span>
+                            <span class="contact-text">sitimariani@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-truck contact-icon"></i>
-                            <span class="contact-text">Pengiriman seluruh area Kediri</span>
+                            <span class="contact-text">Pengiriman seluruh area sambirejo</span>
                         </div>
                     </div>
                     <a href="https://wa.me/62895410714001" class="whatsapp-btn" target="_blank" rel="noopener noreferrer">
