--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                         <img src="20250610_062607_0000.png" alt="Donat Matcha Jepang" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Coklat Kacang</h3>
+                        <h3 class="product-name">Taro</h3>
                         <p class="product-price">Rp 2.000</p>
                         <p class="product-description">Balutan coklat manis dipadukan dengan taburan kacang sangrai yang gurih dan renyah. Perpaduan rasa dan tekstur yang bikin nagih!</p>
                         <span class="product-category">Donat</span>
@@ -851,7 +851,7 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Coklat Kelapa</h3>
+                        <h3 class="product-name">Tiramisu</h3>
                         <p class="product-price">Rp 2.000</p>
                         <p class="product-description">Donut berlapis coklat dengan taburan kelapa parut yang harum dan legit. Cita rasa tropis yang unik dan menggoda.</p>
                         <span class="product-category">Donat</span>
@@ -863,7 +863,7 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Taro</h3>
+                        <h3 class="product-name">Mocacino</h3>
                         <p class="product-price">Rp 2.000</p>
                         <p class="product-description">Donut dengan topping taro ungu yang creamy dan manis pas. Tampilan cantik, rasa fantastik!</p>
                         <span class="product-category">Donat</span>
@@ -875,10 +875,10 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Tiramisu</h3>
-                        <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donat empuk yang dilapisi krim tiramisu lembut, ada rasa kopi yang nyelip manis-pahitnya,Cocok buat nemenin ngopi, nonton series, atau sekadar nyari alasan buat nyemil.</p>
-                        <span class="product-category">Donat</span>
+                        <h3 class="product-name">Kacang</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
                     </div>
                 </div>
 
@@ -887,10 +887,10 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Original</h3>
-                        <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut klasik yang ditaburi gula halus. Simpel, manis, dan selalu jadi favorit semua kalangan.</p>
-                        <span class="product-category">Donat</span>
+                        <h3 class="product-name">Kelapa Parut</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
                     </div>
                 </div>
             </div>
@@ -903,9 +903,9 @@
                         <img src="20250610_062607_0000.png" alt="Risol Mayo Special" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Risol Mayo Special</h3>
-                        <p class="product-price">Rp 8.000</p>
-                        <p class="product-description">Kulit risol renyah dengan isian mayo homemade dan daging asap premium.</p>
+                        <h3 class="product-name">Risol</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Isian: Telur, sosis, smoke beff ukuran biasa</p>
                         <span class="product-category">Risol</span>
                     </div>
                 </div>
@@ -916,9 +916,9 @@
                         <img src="20250610_062607_0000.png" alt="Risol Keju Mozzarella" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Risol Keju Mozzarella</h3>
-                        <p class="product-price">Rp 10.000</p>
-                        <p class="product-description">Keju mozzarella lumer dengan tambahan jamur pilihan.</p>
+                        <h3 class="product-name">Risol Premiun</h3>
+                        <p class="product-price">Rp 4.000</p>
+                        <p class="product-description">RISOL ukuran jumbo dengan isian: Sosis, telur,dan smoke beff yang kebih banyak. </p>
                         <span class="product-category">Risol</span>
                     </div>
                 </div>
@@ -932,9 +932,9 @@
                         <img src="20250610_062607_0000.png" alt="Bucket Premium 20pcs" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Bucket Premium 20pcs</h3>
-                        <p class="product-price">Rp 250.000</p>
-                        <p class="product-description">Paket lengkap 20 donat premium dengan pilihan varian dan dekorasi custom.</p>
+                        <h3 class="product-name">Snack</h3>
+                        <p class="product-price">Rp 25.000-50.000</p>
+                        <p class="product-description">Paket lengkap Snack dan 10 pcs bunga gliter( bahan: Pita satin, pita organdi, kawat bulu, kain tile ).</p>
                         <span class="product-category">Bucket</span>
                     </div>
                 </div>
@@ -945,9 +945,9 @@
                         <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Bucket Mix Donat & Risol</h3>
-                        <p class="product-price">Rp 180.000</p>
-                        <p class="product-description">Kombinasi sempurna 10 donat dan 10 risol pilihan dengan kemasan eksklusif.</p>
+                        <h3 class="product-name">Boneka</h3>
+                        <p class="product-price">Rp 25.000-50.000</p>
+                        <p class="product-description">Paket lengkap Boneka dan 10 pcs bynga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
                         <span class="product-category">Bucket</span>
                     </div>
                 </div>
