--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo">
-                <img src="taro.png" alt="Arya's Collection Logo" class="logo-img">
+                <img src="20250610_082836_0000.png" alt="Arya's Collection Logo" class="logo-img">
                 <span class="logo-text">Arya's<span>Collection</span></span>
             </a>
             <button class="menu-toggle" aria-label="Toggle menu">
@@ -827,7 +827,7 @@
                     <div class="product-info">
                         <h3 class="product-name">Coklat</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut lembut dengan lapisan coklat premium yang meleleh di mulut. Rasa klasik yang tak pernah gagal memanjakan lidah.</p>
+                        <p class="product-description">Donut lembut dengan glaze coklat</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -840,7 +840,7 @@
                     <div class="product-info">
                         <h3 class="product-name">Taro</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Balutan coklat manis dipadukan dengan taburan kacang sangrai yang gurih dan renyah. Perpaduan rasa dan tekstur yang bikin nagih!</p>
+                        <p class="product-description">Donut lembut dengan glaze Taro</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -853,7 +853,7 @@
                     <div class="product-info">
                         <h3 class="product-name">Tiramisu</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut berlapis coklat dengan taburan kelapa parut yang harum dan legit. Cita rasa tropis yang unik dan menggoda.</p>
+                        <p class="product-description">Donut lembut dengan glaze Tiramisu</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -865,7 +865,19 @@
                     <div class="product-info">
                         <h3 class="product-name">Mocacino</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut dengan topping taro ungu yang creamy dan manis pas. Tampilan cantik, rasa fantastik!</p>
+                        <p class="product-description">Donut lembut dengan glaze Mocacino</p>
+                        <span class="product-category">Donat</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Coklat Putih</h3>
+                        <p class="product-price">Rp 2.000</p>
+                        <p class="product-description">Donut lembut dengan glaze Coklat putih</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -882,12 +894,36 @@
                     </div>
                 </div>
 
-            <div class="product-card">
+                <div class="product-card">
                     <div class="product-image">
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Kelapa Parut</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Oreo</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
+                    </div>
+                </div>
+
+            <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Gula Halus</h3>
                         <p class="product-price">Free</p>
                         <p class="product-description"></p>
                         <span class="product-category">Topping</span>
@@ -939,7 +975,6 @@
                     </div>
                 </div>
 
-                <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
                         <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
@@ -947,7 +982,20 @@
                     <div class="product-info">
                         <h3 class="product-name">Boneka</h3>
                         <p class="product-price">Rp 25.000-50.000</p>
-                        <p class="product-description">Paket lengkap Boneka dan 10 pcs bynga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
+                        <p class="product-description">Paket lengkap Boneka dan 10 pcs bunga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
+                        <span class="product-category">Bucket</span>
+                    </div>
+                </div>
+
+                <!-- Product 2 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Boneka + Snack</h3>
+                        <p class="product-price">Rp 50.000 - 100.000</p>
+                        <p class="product-description">Paket lengkap Boneka + Snack dan 20 pcs bunga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
                         <span class="product-category">Bucket</span>
                     </div>
                 </div>
